# madara_6DoF_arm

./: .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  entrypoint.sh
PID-Tuning/: Closed_Loop_velocity_position.py  Motor-Modelisation.py  Postion_Closed_Loop.py  Velocity_Closed_Loop.py  Velocity_Open_Loop.py
docs/: setup.md  top_plate_joint.md
madara_bringup/: CMakeLists.txt  package.xml
madara_bringup/config/: ros2_controllers.yaml
madara_bringup/launch/: bringup_launch.py  camera_launch.py  gz_launch.py
madara_description/: CMakeLists.txt  package.xml
madara_description/config/: initial_positions.yaml
madara_description/launch/: description_launch.py  robot_state_publisher_launch.py
madara_description/meshes/: d415.dae
madara_description/rviz/: description.rviz
madara_description/urdf/: madara.ros2_control.xacro  madara.urdf.xacro  madara_core.xacro  madara_gz.urdf.xacro  real_madara.urdf.xacro  rpi_v2_camera.xacro
madara_firmware/: madara_firmware.ino
madara_hardware_interface/: CMakeLists.txt  madara_hardware_interface.xml  package.xml
madara_hardware_interface/include/madara_hardware_interface/: madara_uart_system.hpp
madara_hardware_interface/src/: madara_uart_system.cpp
madara_moveit_config/: CMakeLists.txt  package.xml
madara_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml
madara_moveit_config/launch/: demo.launch.py  moveit_rviz.launch.py
madara_moveit_config/rviz/: moveit.rviz
madara_moveit_config/srdf/: madara.srdf
madara_moveit_config/urdf/: fake_madara.urdf.xacro
